--- a/style.css
+++ b/style.css
@@ -109,6 +109,23 @@ color: #FBFF25;
   text-align: right;
   padding: 3em;
 }
+
+.lista-valores{
+  text-align: left;
+  padding: 3em;
+}
+
+.lista-valores h3{
+  font-size: 50px;
+  color: #1E3D86;
+  margin-bottom: 0.5em;
+}
+
+.lista-valores ul li{
+  font-size: 30px;
+}
+
+
   .texto-quienes-somos h3{
     font-size: 50px;
     color: #1E3D86;
@@ -160,8 +177,69 @@ padding: 1em 1em 0.5em 1em;
     margin-top: 0em;
   }
 
+  .impacto {
+    display: flex;
+    justify-content: space-around;
+    margin-right: 3em;
+    margin-left: 3em;
+    margin-top: 1.5em;
+    margin-bottom: 5em;
+  }
+  
+  .participantes, .beneficiarios, .niños{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .beneficiarios h2, .niños h2, .participantes h2{
+    margin-top: 1em;
+    padding: 0.5em;
+    border-bottom: 2px #3A5082 solid;
+    color: #ffffff;
+  }
+
+  .impactoTitulo{
+    background-color: #1E3D86;
+    text-align: center;
+  }
+  
+  .tituloImpactoSocial{
+    font-size: 40px ;
+    padding: 0.5em 0em 0.5em 0em ;
+    color: #fff;
+  }
+
+  .beneficiarios p, .participantes p, .niños p {
+    margin-top: 0.5em;
+    font-size: 27px;
+    color: #C3CEDF;
+  }
+
+.alianzas{
+  background-color: #ffffff;
+  text-align: center;
+  border-bottom: 5PX SOLID #3A5082;
+  border-top: 5PX SOLID #3A5082;
+  margin-bottom: 5em;
+}
+
+.alianzas h3{
+  color: #1E3D86;
+  text-align: center;
+  font-size: 50px;
+  margin:0.5em 0em 0em 0em;
+}
+
+.alianzas-logos img{
+height: 200px;
+}
+
+
+
+
   .tabla{
-    margin-top: 2em;
+    margin-top: 3em;
     margin: 2em 20% 2em 20%;
     padding: 20em;
 background-color: #a5a5a5;
@@ -305,3 +383,309 @@ background-color: #a5a5a5;
     text-decoration: none;
     color: beige;
   }
+
+
+
+  /*MEDIA QUERY*/
+@media only screen and (max-width: 960px) {
+
+  .logoFooter {
+    display: none;
+  }
+.tabla{
+  display: none;
+}
+  footer {
+    margin-top: 1em;
+    padding: 0em;
+    width: 100%;
+  }
+  footer nav {
+    display: flex;
+    justify-content:center;
+  }
+  footer nav ul {
+    list-style: none;
+    text-align: center;
+    padding: 1em;
+  }
+  footer nav ul li {
+    padding: 0.5em;
+  }
+
+  .cabezera__menu ul li, .cabezera__menu ul, .cabezera__menu, .cabezera__visual, .cabezera{
+    display: flex;
+    flex-direction: row;
+  }
+
+
+.cabezera {
+  text-align: center;
+  flex-direction: column;
+  position: relative;
+  }
+  
+  .cabezera__visual {
+    justify-content: center;
+  }
+  .cabezera__visual h1 {
+    font-size: 25px;
+    color: #1E3D86;
+    margin: 0.7em 1em 0.5em 0.1em;
+  }
+  
+  .cabezera__visualImg {
+    margin: 0.5em 1em 0.5em 2em;
+    height: 35px;
+    width: 35px;
+  }
+
+  .cabezera__menu{
+    display: flex;
+  }
+  
+  .cabezera__menu ul {
+    justify-content: center;
+    padding: 0em;
+    margin: 0em;
+    flex-wrap: wrap;
+  }
+  .cabezera__menu ul li {
+    font-size: 10px;
+    padding-left: 1em;
+  }
+  .cabezera__menu ul li a {
+    text-decoration: none;
+    color: #1E3D86;
+    font-size: 20px;
+    padding: 0em;
+  }
+  .cabezera__menu ul li a:hover {
+    color:  black;
+    transition: 0.1s;
+  }
+
+  .somos{
+    background-color: #1E3D86;
+  }
+
+  .grilla{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .redes{
+text-align: center;
+padding: 0.5em;
+width: 100%;
+  }
+
+  .redes a img{
+    width: 50px;
+    margin-left: 0.5em;
+  }
+
+  .redes a img:hover{
+    transform: scale(1.1);
+    transition: 0.4s;
+  }
+
+  .grilla img{
+    width: 100%;
+    padding-bottom: em;
+    padding-top: 0em;
+  }
+
+  .grilla h2{
+    font-size: 40px;
+    text-align: center;
+    padding:0em;
+    color: white;
+    font-weight: bold;
+  }
+
+  .impacto {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-right: 3em;
+    margin-left: 3em;
+    margin-top: 1.5em;
+    margin-bottom: 5em;
+  }
+  
+  .participantes, .beneficiarios, .niños{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .beneficiarios h2, .niños h2, .participantes h2{
+    margin-top: 1em;
+    padding: 0.5em;
+    border-bottom: 2px #3A5082 solid;
+    color: #ffffff;
+  }
+
+  .impactoTitulo{
+    background-color: #1E3D86;
+    text-align: center;
+  }
+  
+  .tituloImpactoSocial{
+    font-size: 40px ;
+    padding: 0.5em 0em 0.5em 0em ;
+    color: #fff;
+  }
+
+  .beneficiarios p, .participantes p, .niños p {
+    margin-top: 0.5em;
+    font-size: 27px;
+    color: #C3CEDF;
+  }
+
+  /*Hacemos*/
+  .quienes-somos {
+    padding: 1em;
+  }
+
+.texto-hacemos{
+  text-align: right;
+  padding: 1em;
+}
+
+.lista-valores{
+  text-align: left;
+  padding: 1em;
+}
+
+.lista-valores h3{
+  font-size: 50px;
+  color: #1E3D86;
+  margin-bottom: 0.5em;
+}
+
+.lista-valores ul li{
+  font-size: 30px;
+}
+
+
+  .texto-quienes-somos h3{
+    font-size: 50px;
+    color: #1E3D86;
+    margin-bottom: 0.5em;
+  }
+
+  .texto-quienes-somos p{
+    font-size: 25px;
+  }
+
+  .texto-hacemos h3{
+    font-size: 50px;
+    color: #1E3D86;
+    margin-bottom: 0.5em;
+  }
+
+  .texto-hacemos p{
+    font-size: 25px;
+  }
+
+
+  #simple_gallery {
+    width: 100%;
+    max-width: 100%;
+    margin: 0em 0em 0em 0em;
+    padding: 0em;
+    text-align: center;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    
+  }
+  #simple_gallery ul {
+    display: block;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  #simple_gallery ul li {
+    display: block;
+    float: left;
+    width: 100%;
+    margin: 0;
+    padding: 0px;
+    padding-bottom: 10px;
+    text-align: center;
+    
+  }
+  #simple_gallery ul li img {
+    width: 90%;
+    display: block;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: .5s;
+    filter: grayscale(100%);
+    height: 300PX;
+    margin-left: 1em;
+  }
+  #simple_gallery ul li img:hover {
+    filter: grayscale(0);
+  }
+  #overflow {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(51, 51, 51, 0.7);
+      top: 0;
+      left: 0;
+      margin: 0;
+      z-index: 10;
+      display: none;
+      text-align: center;
+  }
+  
+  #overflow img {
+      width: 80%;
+      margin: auto;
+      display: block;
+      margin-top: 5%;
+      max-width: 1100px;
+  }
+  #overflow .fa {
+      float: right;
+      font-size: 40px;
+      color: #fff;
+      margin: 30px 30px 0 0;
+      cursor: pointer;
+  }
+  .clear {
+    clear:both;
+  }
+ 
+  #simple_gallery h2{
+    font-size: 40px;
+    color: #1E3D86;
+    border-bottom: 20px double #3A5082;
+    display: inline-block;
+  }
+
+  .sedes{
+    font-size: 30px;
+    text-align: center;
+    padding: 1em 1em 0.5em 1em;
+      }
+
+      .escuelita p{
+        font-size: 20px;
+        color: #1E3D86;
+        text-align: left;
+        padding: 1em 1em 1em 1em;
+      }
+      
+      .alianzas-logos img{
+        height: 150px;
+        }
+
+}
